--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Thiruvuru, Vijayawada, Andhra Pradesh</p>
+            <p>Tiruvuru, Vijayawada, Andhra Pradesh</p>
           </div>
         </div>
 
@@ -601,7 +601,7 @@
               <a href="https://www.facebook.com/anshu0124?mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/arcane_anshu/" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="linkedin.com/in/gayathri-lakshmi-774a782a3" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              <a href="gayathrilakshmisamudrala02.com" class="email"><i class="bi bi-envelope"></i></a>
+              <a href="gayathrilakshmisamudrala02@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -610,7 +610,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>gayathrilakshmisamudrala02.com</p>
+            <p>gayathrilakshmisamudrala02@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
